fixed java preview mode